README: add erlang to source for MagicIndex formula

--- a/README.adoc
+++ b/README.adoc
@@ -294,7 +294,7 @@ magic_index = ((occupied & mask) * magic_number) >> shift;
 ----
 
 in Erlang:
-[source]
+[source,erlang]
 ----
 MagicIndex = (((Occupied band Mask) * MagicNumber) bsr Shift).
 ----
