--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,8 @@
 :toc: macro
 :toclevels: 4
 
+image::https://user-images.githubusercontent.com/296845/61049807-10264c00-a3ee-11e9-8aac-aa74a1e16de7.png[Binbo sample]
+
 Binbo is a Chess representation written in pure Erlang using https://www.chessprogramming.org/Bitboards[Bitboards]. It is basically aimed to be used on game servers where people play chess online.
 
 It's called `Binbo` because its ground is a **bin**ary **bo**ard containing only zeros and ones (`0` and `1`) since this is the main meaning of Bitboards as an internal chessboard representation.
