--- a/README.adoc
+++ b/README.adoc
@@ -497,3 +497,7 @@ It should do the similar things for `persistent_term` data, say, delete all unus
 In this case we run into the issue regarding scanning the heaps in all processes.
 
 So, using `global` dynamic modules with large static data seems to be more reasonable in spite of that fact that it significantly slows down the application startup due to the run-time compilation of these modules.
+
+== License
+
+This project is licensed under the terms of the Apache License, Version 2.0. See the link:LICENSE[LICENSE] file for details.
