--- a/README.adoc
+++ b/README.adoc
@@ -500,4 +500,6 @@ So, using `global` dynamic modules with large static data seems to be more reaso
 
 == License
 
-This project is licensed under the terms of the Apache License, Version 2.0. See the link:LICENSE[LICENSE] file for details.
+This project is licensed under the terms of the Apache License, Version 2.0.
+
+See the link:LICENSE[LICENSE] file for details.
