--- a/README.adoc
+++ b/README.adoc
@@ -625,6 +625,12 @@ In this case we run into the issue regarding scanning the _heaps_ in all process
 
 So, using `global` dynamic modules with large static data seems to be more reasonable in spite of that fact that it significantly slows down the application startup due to the run-time compilation of these modules.
 
+== Contributing
+
+Want to contribute? Really? Awesome!
+
+Please refer to the link:CONTRIBUTING.adoc[CONTRIBUTING] file for details.
+
 == License
 
 This project is licensed under the terms of the Apache License, Version 2.0.
