README: document binbo:all_legal_moves/1,2

--- a/README.adoc
+++ b/README.adoc
@@ -412,6 +412,105 @@ binbo:game_status(Pid) -> {ok, GameStatus} | {error, Reason}.
 * `{draw, threefold_repetition}` - draw according to the threefold repetition rule;
 * `{draw, {manual, WhyDraw}}` - draw was set link:#setting-a-draw[manually] for the reason of `WhyDraw`.
 
+=== List of legal moves
+
+[source,erlang]
+----
+binbo:all_legal_moves(Pid) -> {ok, Movelist} | {error, Reason}.
+
+binbo:all_legal_moves(Pid, Movetype) -> {ok, Movelist} | {error, Reason}.
+----
+
+.where:
+* `Pid` is the pid of the game process;
+* `Movelist` is a list of all legal moves for the current position. Each element of `Movelist` is a tuple `{From, To}`, where `From` and `To` are starting and target square respectively. The values of `From` and `To` depend on `Movetype`.
+* `Movetype` can take on of the values: `int`, `bin`, or `str`.
+
+The call `binbo:all_legal_moves(Pid)` is the same as `binbo:all_legal_moves(Pid, int)`.
+
+The elements `{From, To}` of `Movelist` depend on `Movetype` as follows:
+
+* `int`: the values of `From` and `To` are _integers_ in range `0..63`, namely, square indices. For example, the move from `A1` to `H8` corresponds to `{0, 63}`. Use `int` to get the *fastest* reply from the game process.
+* `bin`: the values of `From` and `To` are _binaries_. For example: `{<<"e2">>, <<"e4">>}`.
+* `str`: the values of `From` and `To` are _strings_. For example: `{"e2", "e4"}`.
+
+.Example:
+[source,erlang]
+----
+> {ok, Pid} = binbo:new_server().
+{ok,<0.212.0>}
+
+> binbo:new_game(Pid).
+{ok,continue}
+
+> binbo:all_legal_moves(Pid).
+{ok,[{15,31},
+     {15,23},
+     {14,30},
+     {14,22},
+     {13,29},
+     {13,21},
+     {12,28},
+     {12,20},
+     {11,27},
+     {11,19},
+     {10,26},
+     {10,18},
+     {9,25},
+     {9,17},
+     {8,24},
+     {8,16},
+     {6,23},
+     {6,21},
+     {1,18},
+     {1,16}]}
+
+> binbo:all_legal_moves(Pid, bin).
+{ok,[{<<"h2">>,<<"h4">>},
+     {<<"h2">>,<<"h3">>},
+     {<<"g2">>,<<"g4">>},
+     {<<"g2">>,<<"g3">>},
+     {<<"f2">>,<<"f4">>},
+     {<<"f2">>,<<"f3">>},
+     {<<"e2">>,<<"e4">>},
+     {<<"e2">>,<<"e3">>},
+     {<<"d2">>,<<"d4">>},
+     {<<"d2">>,<<"d3">>},
+     {<<"c2">>,<<"c4">>},
+     {<<"c2">>,<<"c3">>},
+     {<<"b2">>,<<"b4">>},
+     {<<"b2">>,<<"b3">>},
+     {<<"a2">>,<<"a4">>},
+     {<<"a2">>,<<"a3">>},
+     {<<"g1">>,<<"h3">>},
+     {<<"g1">>,<<"f3">>},
+     {<<"b1">>,<<"c3">>},
+     {<<"b1">>,<<"a3">>}]}
+
+> binbo:all_legal_moves(Pid, str).
+{ok,[{"h2","h4"},
+     {"h2","h3"},
+     {"g2","g4"},
+     {"g2","g3"},
+     {"f2","f4"},
+     {"f2","f3"},
+     {"e2","e4"},
+     {"e2","e3"},
+     {"d2","d4"},
+     {"d2","d3"},
+     {"c2","c4"},
+     {"c2","c3"},
+     {"b2","b4"},
+     {"b2","b3"},
+     {"a2","a4"},
+     {"a2","a3"},
+     {"g1","h3"},
+     {"g1","f3"},
+     {"b1","c3"},
+     {"b1","a3"}]}
+
+----
+
 [[setting-a-draw]]
 === Setting a draw
 
